<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity"
    android:background="@color/background"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/information"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="140dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/outputValues"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/text"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:padding="13dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="left"/>
        <TextView
            android:id="@+id/outputResult"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/text"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:padding="12dp"
            android:layout_marginBottom="30dp" />
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:padding="13dp"
            android:textColor="@color/white"
            android:background="@drawable/buttons"
            android:text="@string/regist_text"
            android:layout_marginTop="190dp"
            android:textSize="18dp"
            android:onClick="comeback"
            android:textAllCaps="false"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>