<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/background"
    android:padding="11dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:autoSizeTextType="none"
        android:text="Конвертер единиц информации"
        android:textSize="28dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="175dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text">
            <EditText
                android:id="@+id/inputValues"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:textSize="20dp"

                android:hint="@string/inputNumbers"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="306dp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_width="wrap_content"
                android:text="@string/from"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_width="wrap_content"
                android:text="@string/in"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="9dp">
            <Spinner
                android:id="@+id/spinnerFrom"
                android:background="@drawable/text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="235dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/spinnerIn"
                android:background="@drawable/text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="235dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text">
            <EditText
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:hint="@string/result"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="306dp"
                tools:ignore="MissingConstraints"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/resultButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/buttons"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:onClick="toCalculate"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>